add graph outcome by categories in history page

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -183,6 +183,7 @@
 .pagination-list {
     display: flex;
     align-items: center;
+    margin-bottom: 0 !important;
 }
 
 .pagination-list input {
